2012-11-26      1.13    Changes in D::D::D to cope with incompatible
                          changes in new Data::Domain

2011-09-02      1.12    Bugfix Documenter.pm to replace *all* underscores
                          in function names

2011-09-01      1.11    Reduce dependency versions (this is mostly for my
                          employer's benefit - no functional changes)

2011-08-22      1.1     Make *_of self-documenting

2011-08-17      1.00    Initial release