@@ -17,5 +17,6 @@ t/05-extra-validator-without-doco.t
 t/06-extra-validator-with-doco.t
 t/lib/Params/Validate/Dependencies/two_of.pm
 t/coverage.sh
+t/git-issue-1-return-values.t
 META.yml                                 Module YAML meta-data (added by MakeMaker)
 META.json                                Module JSON meta-data (added by MakeMaker)
