@@ -48,5 +48,5 @@
          "url" : "https://github.com/DrHyde/perl-modules-Params-Validate-Dependencies"
       }
    },
-   "version" : "1.13"
+   "version" : "1.2"
 }
